[tool.poetry]
name = "data-stucture-in-python"
version = "0.1.0"
description = "data structure practice in python"
authors = ["pacho-h <pacho.h90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
