[tool.poetry]
name = "data-stucture-in-python"
version = "0.1.0"
description = "data structure practice in python"
authors = ["pacho-h <pacho.h90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynvim = "^0.5.0"
tabulate = "^0.9.0"
ruff = "^0.4.9"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
